# libgfshare

./: .bzrignore  Makefile.am  README  configure.ac  make-dist.sh  prep-fresh.sh
doc/: theory.tex
include/: libgfshare.h
m4/: linker.m4
man/: gfcombine.1.in  gfshare.7.in  gfsplit.1.in  libgfshare.5.in
src/: gfshare_maketable.c  libgfshare.c
tests/: test_gfshare.c  test_gfshare_blockwise_simple.c  test_gfshare_bytewise.c  test_gfsplit_gfcombine.sh
tools/: gfcombine.c  gfsplit.c
